# tagcook

./: configure.ac
src/: .dir-locals.el  Makefile.am  arch_lib.c  arch_lib.h  arch_lib_parse_token.c  arch_lib_sim.c  assign_actions.c  assign_data.c  assign_data.h  base_quality.c  calibrate_pst.c  calibrate_pst.h  correct.c  extract_reads.c  filter.c  init_poahmm.c  interface.c  interface.h  main.c  outfmt.h  poahmm.c  poahmm_test.c  pst.c  pst.h  pst_structs.h  pst_test.c  sim_dust_test.c  sim_seq_lib.c  test_arch.c
